<resources>
    <string name="app_name">MovieApp</string>
    <string name="facebook_app_id">1530042647094273</string>
    <string name="fb_login_protocol_scheme">fb1530042647094273</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>

    <string name="facebook">Facebook</string>
    <string name="google">Google</string>

    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="save">SAVE</string>
    <string name="moviesDescription">Descriptin about movies I like:</string>
    <string name="aboutMe">About me:</string>
    <string name="topRatedMovies">Top Rated Movies</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="movieDetailsTitle">Movie Details</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorite movies :(</string>
    <string name="no_new_films">Empty list :(</string>
    <string name="empty_list">Empty list :(</string>
    <string name="movies_i_like">About movies I like:</string>
    <string name="hint_about_me">About me:</string>
    <string name="hint_about_movies">About movies I like:</string>
    <string name="searchMovies">Search Movies</string>
    <string name="search">Search</string>
    <string name="searchUsers">Search users</string>


</resources>
