<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/toolbar_color"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backDetails"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/back" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageDetails"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:src="@drawable/movies" />

        <TextView
            android:id="@+id/descName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textColor="@color/main_green"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_gray"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/descEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/hint_email"
            android:textColor="@color/main_green"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_gray"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/nothingImportant2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/aboutMe"
            android:textColor="@color/main_green"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/aboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_gray"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/nothingImportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/movies_i_like"
            android:textColor="@color/main_green"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/profileMoviesDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_gray"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/moviesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:text = "USER MOVIES"
            android:textSize="19sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewDetails"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:listitem="@layout/holder_movies"/>
    </LinearLayout>
</ScrollView>